

DEPRECATED & DEFUNCT

    o	Bundles of packages are deprecated.  See 'Writing R
	Extensions' for the steps needed to unbundle a bundle.

    o	png(type="cairo1") is defunct: the value is no longer recognized.

    o	tools::Rd_parse() is defunct (as this version of R uses only
	Rd version 2).

    o	clearNames() ('stats') is deprecated for unname().


INSTALLATION

    o	cairo >= 1.2 is now required (1.2.0 was released in July 2006)
	for cairo-based graphics devices (which remain optional).

    o	A suitable iconv() is now required: support for configure option
	--without-iconv has been withdrawn (it was deprecated in R 2.5.0).

    o	Perl is no longer 'essential'.	R can be built without it, but
	scripts R CMD build, check, Rprof and Sd2d require it.

    o	A system 'glob' function is now essential (a working
	Sys.glob() has been assumed since R 2.9.0 at least).

    o	C99 support for MBCS is now required, and configure option
	--disable-mbcs has been withdrawn.


INTERNATIONALIZATION

    o	There is some makefile support for adding/updating translations
	in packages: see po/README and 'Writing R Extensions'.

	There is support for the use of 'dngettext' for C-level
	translations in packages: see 'Writing R Extensions'.


BUG FIXES

    o	Assigning an extra 0-length column to a data frame by
	DF[, "foo"] <- value now works in most cases (by filling with
	NAs) or fails.	(It used to give a corrupt data frame.)

    o	validObject() avoids an error during evaluation in the case
	of various incorrect slot definitions.

    o	n:m now returns a result of type "integer" in a few more
	boundary cases.

    o	The 'zap.ind' argument to printCoefmat() did not usually work as
	other code attempted to ensure that non-zero values had a
	non-zero representation.

    o	printCoefmat() formatted groups of columns together, not just
	the cs.ind group but also the zap.ind group and a residual
	group.	It now formats all columns except the cs.ind group