@@ -30,7 +30,7 @@ strsplit(x, split, extended = TRUE, fixed = FALSE, perl = FALSE,
   \item{extended}{
     logical.  If \code{TRUE} (the default), extended regular expression
     matching is used, and if \code{FALSE} basic regular expressions are
-    used.
+    used (these are deprecated).
   }
   \item{fixed}{
     logical.  If \code{TRUE} match \code{split} exactly, otherwise
